--- a/index.html
+++ b/index.html
@@ -71,7 +71,50 @@
   </nav>
   <main>
     <div class="" id="chats">
-      lista de chats
+      <div class="chat-card my-2 mx-1 py-2 px-3">
+        <div class="p-2">
+          <img src="assets/profile-pics/bulma.jpg" class="rounded-circle img-chat">
+        </div>
+        <div class="texts p-2"> <!-- Textos -->
+          <div class="d-flex justify-content-between">
+            <div><b>Vegeta</b></div>
+            <div>9:00pm</div>
+          </div>
+          <div class="small">
+            Vegeta: Kakaroto!!!
+          </div>
+        </div>
+      </div>
+      <!--  -->
+      <div class="chat-card my-2 mx-1 py-2 px-3">
+        <div class="p-2">
+          <img src="assets/profile-pics/goku.jpg" class="rounded-circle img-chat">
+        </div>
+        <div class="texts p-2"> <!-- Textos -->
+          <div class="d-flex justify-content-between">
+            <div><b>Vegeta</b></div>
+            <div>9:00pm</div>
+          </div>
+          <div class="small">
+            Vegeta: Kakaroto!!!
+          </div>
+        </div>
+      </div>
+      <!--  -->
+      <div class="chat-card my-2 mx-1 py-2 px-3">
+        <div class="p-2">
+          <img src="assets/profile-pics/cell.jpg" class="rounded-circle img-chat">
+        </div>
+        <div class="texts p-2"> <!-- Textos -->
+          <div class="d-flex justify-content-between">
+            <div><b>Vegeta</b></div>
+            <div>9:00pm</div>
+          </div>
+          <div class="small">
+            Vegeta: Kakaroto!!!
+          </div>
+        </div>
+      </div>
     </div>
     <div class="" id="contacts">
       lista de contactos
