--- a/index.html
+++ b/index.html
@@ -27,55 +27,7 @@
 			</div>
 			<div class="container-fluid">
 				<div id="users-list" class="row">
-					<div class="small">Seleccione un usuario</div>
-					<div class="col-2">
-						<img
-							src="assets/profile-pics/androide_16.jpg"
-							class="rounded-circle"
-						/>
-					</div>
-					<div class="col-2">
-						<img
-							src="assets/profile-pics/androide_18.jpg"
-							class="rounded-circle"
-						/>
-					</div>
-					<div class="col-2">
-						<img src="assets/profile-pics/baby.jpg" class="rounded-circle" />
-					</div>
-					<div class="col-2">
-						<img src="assets/profile-pics/cell.jpg" class="rounded-circle" />
-					</div>
-					<div class="col-2">
-						<img src="assets/profile-pics/dende.jpg" class="rounded-circle" />
-					</div>
-					<div class="col-2">
-						<img src="assets/profile-pics/freezer.jpg" class="rounded-circle" />
-					</div>
-					<div class="col-2">
-						<img
-							src="assets/profile-pics/androide_16.jpg"
-							class="rounded-circle"
-						/>
-					</div>
-					<div class="col-2">
-						<img
-							src="assets/profile-pics/androide_18.jpg"
-							class="rounded-circle"
-						/>
-					</div>
-					<div class="col-2">
-						<img src="assets/profile-pics/baby.jpg" class="rounded-circle" />
-					</div>
-					<div class="col-2">
-						<img src="assets/profile-pics/cell.jpg" class="rounded-circle" />
-					</div>
-					<div class="col-2">
-						<img src="assets/profile-pics/dende.jpg" class="rounded-circle" />
-					</div>
-					<div class="col-2">
-						<img src="assets/profile-pics/freezer.jpg" class="rounded-circle" />
-					</div>
+					
 				</div>
 			</div>
 			<div>
@@ -90,68 +42,13 @@
 		<main>
 			<!-- Lista de chats -->
 			<div class="" id="chats">
-				<div class="chat-card my-2 mx-1 py-2 px-3" onclick="showChatDetail()">
-					<div class="p-2">
-						<img
-							src="assets/profile-pics/bulma.jpg"
-							class="rounded-circle img-chat"
-						/>
-					</div>
-					<div class="texts p-2">
-						<!-- Textos -->
-						<div class="d-flex justify-content-between">
-							<div><b>Vegeta</b></div>
-							<div>9:00pm</div>
-						</div>
-						<div class="small">Vegeta: Kakaroto!!!</div>
-					</div>
-				</div>
-				<!--  -->
-				<div class="chat-card my-2 mx-1 py-2 px-3">
-					<div class="p-2">
-						<img
-							src="assets/profile-pics/goku.jpg"
-							class="rounded-circle img-chat"
-						/>
-					</div>
-					<div class="texts p-2">
-						<!-- Textos -->
-						<div class="d-flex justify-content-between">
-							<div><b>Vegeta</b></div>
-							<div>9:00pm</div>
-						</div>
-						<div class="small">Vegeta: Kakaroto!!!</div>
-					</div>
-				</div>
-				<!--  -->
-				<div class="chat-card my-2 mx-1 py-2 px-3">
-					<div class="p-2">
-						<img
-							src="assets/profile-pics/cell.jpg"
-							class="rounded-circle img-chat"
-						/>
-					</div>
-					<div class="texts p-2">
-						<!-- Textos -->
-						<div class="d-flex justify-content-between">
-							<div><b>Vegeta</b></div>
-							<div>9:00pm</div>
-						</div>
-						<div class="small">Vegeta: Kakaroto!!!</div>
-					</div>
-				</div>
+				
 			</div>
 			<!-- CONTACTOS -->
 			<div class="" id="contacts">lista de contactos</div>
 			<!-- DETALLE CHAT -->
 			<div class="" id="chat-detail">
-				<div>
-					<div class="message sent">
-            Mensaje 1
-            <div class="small text-end">9:00pm</div>
-          </div>
-					<div class="message received">Mensaje 2</div>
-					<div class="message sent">Mensaje 3</div>
+				<div id="chat-messages">
 				</div>
 				<div class="stickers" id="stickers">
 					<div class="container-fluid">
@@ -206,6 +103,7 @@
 			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
 			crossorigin="anonymous"
 		></script>
+		<script src="assets/js/data.js"></script>
 		<script src="assets/js/controlador.js"></script>
 	</body>
 </html>
